--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -176,8 +176,8 @@ padding: 5px;
 .tt-intro{
 font-size: 20px;
 color: black;
-font-weight: light;
-letter-spacing: 1;
+font-weight: lighter;
+letter-spacing: 1px;
 line-height: 1.25;
 }
 
@@ -227,7 +227,7 @@ margin: 25%;
 
 .tt-section-3{
 background-image: url('../files/tt-header-4.jpg');
-background-repeat: norepeat;
+background-repeat: no-repeat;
 background-size: cover;
 background-position: center;
 height: 300px;
@@ -246,7 +246,7 @@ width: 80%;
 margin: 25px 0;
 }
 
-@media (min-width: 720px){
+@media only screen and (min-width: 720px){
 /*HEADER AND FOOTER*/
 header{
 padding: 50px 25px;
@@ -466,7 +466,7 @@ color: white;
 }
 
 
-@media (min-width: 720px){
+@media only screen and (min-width: 720px){
 .tt-page{
 margin-bottom: 50px !important;
 }
