--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -315,6 +315,7 @@ width: 100vw;
 #section-1-1{
 height: 100%;
 }
+
 #section-1-2{
 height: 100%;
 }
@@ -375,15 +376,6 @@ font-size: 2.75vw;
 font-size: 2vw;
 }
 
-
-}
-
-@media screen and (min-width: 1600px){
-.tt-theme{
-padding: 0 75px !important;
-margin: 25% 0;
-height: 50%;
-}
 
 }
 
@@ -508,10 +500,9 @@ height: 400px;
 
 #section-1 h2{
 color: white;
-padding: 150px;
+padding: 150px 0px;
 font-size: 35px;
 text-align: center;
-height: 50%;
 }
 
 .tt-resources{
