--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -434,6 +434,10 @@ background: none;
 padding: 50px;
 }
 
+.tt-resources-header{
+font-size: 24px !important;
+}
+
 .tt-map{
 width: 100%;
 height: 350px;
@@ -468,7 +472,9 @@ color: black;
 border-bottom: solid 1px #EEA105;
 }
 
-#section-1 h2{
+#section-1 h1{
+font-weight: lighter;
+letter-spacing: 1.05px;
 color: white;
 font-size: 24px;
 text-align: center;
@@ -507,7 +513,7 @@ margin-bottom: 50px !important;
 height: 400px;
 }
 
-#section-1 h2{
+#section-1 h1{
 color: white;
 padding: 150px 0px;
 font-size: 35px;
