--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -65,7 +65,7 @@ display: block;
 
 
 nav ul{
-margin: 15px 0 0 0;
+margin: 25px 0 0 0;
 padding: 0;
 }
 
@@ -261,6 +261,10 @@ nav{
 float: right;
 display: block;
 margin: 0px 50px 0px 0px;
+}
+
+nav ul{
+margin: 15px 0 0 0;
 }
 
 nav ul li{
