--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -1,12 +1,12 @@
 /*GENERAL*/
 
 *{
-margin: 0;;
+margin: 0;
 padding:0;
 }
 
 body{
-font-family: 'Helvetica Neue', sans-serif;
+font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 background-color: white;
 overflow-x: hidden;
 }
@@ -63,7 +63,6 @@ display: none;
 display: block;
 }
 
-
 nav ul{
 margin: 25px 0 0 0;
 padding: 0;
@@ -85,6 +84,7 @@ nav ul li a:hover{
 color: #EEA105;
 transition: all ease 0.7s;
 }
+
 nav img{
 width: 20px;
 vertical-align: middle;
@@ -99,12 +99,10 @@ margin: 25px auto;
 margin: 25px 0;
 }
 
-
 #tt-logos img{
 vertical-align: middle;
 display: block;
 }
-
 
 .tt-partners img{
 width: 125px;
@@ -152,11 +150,11 @@ height: 300px;
 #section-2-1{
 background-color: grey;
 height: auto;
-color: white
+color: white;
 }
 
 
-#section-2-1 a{&mdash;
+#section-2-1 a{
 color: white;
 text-transform: uppercase;
 font-size: 20px;
@@ -178,10 +176,9 @@ line-height: 1.5;
 
 
 .tt-section{
-padding: 25px 50px;
+padding: 50px;
 box-sizing: border-box;
 }
-
 
 .tt-theme{
 font-weight: lighter;
@@ -192,13 +189,9 @@ letter-spacing: 2px;
 padding: 100px 50px !important;
 }
 
-.tt-section{
-padding: 50px;
-box-sizing: border-box;
-}
 
 .tt-font-bold{
-font-family: 'Helvetica', sans-serif;
+font-family: 'Helvetica', Arial, sans-serif;
 font-weight: normal !important;
 letter-spacing: 1.05px;
 }
@@ -232,7 +225,7 @@ padding: 5px;
 }
 
 .tt-hash{
-font-family: 'Helvetica', sans-serif;
+font-family: 'Helvetica', Arial, sans-serif;
 font-weight: bold !important;
 font-size: 20px;
 color: grey;
@@ -255,7 +248,6 @@ margin: 0 50px;
 label, input{
 display: none;
 }
-
 
 nav{
 float: right;
@@ -313,7 +305,6 @@ height: 50%;
 margin: 25% 0;
 }
 
-
 #section-1{
 width: 100vw;
 height: 450px;
@@ -323,7 +314,6 @@ height: 450px;
 clear: both;
 width: 100vw;
 }
-
 
 #section-1-1{
 height: 100%;
@@ -343,7 +333,6 @@ width: 65vw;
 float: right;
 }
 
-
 #section-2-1{
 height: 150px;
 outline: dotted 1px #EEA105;
@@ -353,17 +342,13 @@ outline-offset: 10px;
 #section-2-2 p{
 padding: 20px 0px;
 }
-
-
 }
-
 
 @media screen and (max-width: 1132px) and (min-width: 699px){
 
 #section-1{
 height: 400px;
 }
-
 
 #section-1-1{
 width: 40vw;
@@ -388,8 +373,6 @@ font-size: 2.75vw;
 .tt-date{
 font-size: 2vw;
 }
-
-
 }
 
 
@@ -411,7 +394,6 @@ display: none;
 #section-2-1.tt-page-2{
 display: none;
 }
-
 
 #section-1-2.tt-general-info{
 background-image: url('../files/world-bank-header.jpg');
@@ -471,7 +453,6 @@ margin: 25px 0px;
 color: black;
 }
 
-
 .tt-page-2 a{
 border-bottom: solid 1px #EEA105;
 }
@@ -497,12 +478,15 @@ width: 175px;
 text-align: center;
 font-size: 16px;
 }
+
 .tt-download a{
 color: #EEA105;
 }
+
 .tt-download:hover{
 background-color: #EEA105;
 }
+
 .tt-download:hover a{
 color: white;
 }
@@ -532,13 +516,7 @@ padding: 50px 25px !important;
 display: none;
 }
 
-
 .tt-page.section-2-2.tt-section{
 padding: 0;
 }
-
-
 }
-
-
-</style>
