--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -6,7 +6,7 @@ padding:0;
 }
 
 body{
-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+font-family: 'Roboto', Helvetica, Arial, sans-serif;
 background-color: white;
 overflow-x: hidden;
 }
@@ -64,6 +64,7 @@ display: block;
 }
 
 nav ul{
+font-family: "Helvetica", sans-serif;
 margin: 25px 0 0 0;
 padding: 0;
 }
@@ -72,12 +73,13 @@ nav ul li{
 display: block;
 padding: 12px 0px;
 text-transform: uppercase;
-font-weight: bolder;
+font-weight: bold;
 font-size: 12px;
 }
 
 nav ul li a{
 color: black;
+font-weight: bold !important;
 }
 
 nav ul li a:hover{
@@ -191,7 +193,6 @@ padding: 100px 50px !important;
 
 
 .tt-font-bold{
-font-family: 'Helvetica', Arial, sans-serif;
 font-weight: normal !important;
 letter-spacing: 1.05px;
 }
@@ -216,6 +217,7 @@ padding: 10px 0;
 .tt-agenda-button{
 text-transform: uppercase;
 letter-spacing: 1.05px;
+font-weight: normal;
 }
 
 .tt-contact::before{
@@ -225,7 +227,6 @@ padding: 5px;
 }
 
 .tt-connect{
-font-family: 'Helvetica', Arial, sans-serif;
 font-weight: normal !important;
 font-size: 16px;
 color: black;
@@ -237,6 +238,10 @@ color: black;
 
 .tt-hash{
 color: #EEA105;
+}
+
+.tt-hash a{
+color: inherit;
 }
 
 .tt-hr{
