--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -475,7 +475,7 @@ font-size: 2vw;
 }
 
 
-/*INFORMATION & RESOURCES PAGE*/
+/*INFORMATION, RESOURCES, MEMBER PAGES*/
 
 
 #main-body{
@@ -501,8 +501,15 @@ background-repeat: no-repeat;
 background-size: cover;
 }
 
-#section-1-2.tt-page-2{
-background: url('../files/tt-resources-header.jpg');
+#section-1-2.tt-resources{
+background: url('../files/tt-resources-header.jpg') !important;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
+
+#section-1-2.tt-member{
+background: url('../files/tt-member-header.jpg');
 background-position: center;
 background-repeat: no-repeat;
 background-size: cover;
@@ -580,7 +587,7 @@ border: solid #EEA105 0.5px;
 border-radius: 15px;
 padding: 10px !important;
 margin: 25px 0px;
-width: 175px;
+width: 250px;
 text-align: center;
 font-size: 16px;
 }
@@ -638,5 +645,100 @@ width: 75%;
 display: inline-block;
 margin: 25px 20px 25px 0px;
 }
+}
 
+
+/*BECOME A MEMBER PAGE */
+
+#tt-member{
+margin-bottom: 50px;
+}
+
+
+.tt-member-block-header{
+color: white;
+text-align: center;
+padding: 20px;
+margin-bottom: 25px;
+}
+
+.tt-member-block strong{
+font-weight: bold;
+}
+
+.tt-member-block-header p:nth-child(1){
+font-weight: lighter;
+height: 50px;
+font-size: 20px;
+}
+
+
+.tt-member-block-header:after{
+content: url('../files/tt-member-page-icon.svg');
+position: relative;
+top: 40px;
+}
+
+.tt-member-block-header p:nth-child(2){
+font-weight: bold;
+font-size: 22px;
+}
+
+.tt-knowledge .tt-member-block-header{
+background-color: #c51f24;
+}
+
+.tt-development .tt-member-block-header{
+background-color: #e98300;
+}
+
+.tt-parallel .tt-member-block-header{
+background-color: #fcd900;
+}
+
+.tt-member-sponsor .tt-member-block-header{
+background-color: #9b9b9b;
+}
+
+
+.tt-knowledge strong{
+color: #c51f24;
+}
+
+.tt-development strong{
+color: #e98300;
+}
+
+.tt-parallel strong{
+color: #fcd900;
+}
+
+.tt-member-sponsor strong{
+color: #9b9b9b;
+}
+
+@media screen and (min-width: 1150px){
+
+#tt-member{
+display: flex;
+display: -webkit-box;
+display: -ms-flexbox;
+display: -webkit-flex;
+}
+
+#tt-member > div{
+flex: 1;
+-webkit-box-flex: 1;
+-webkit-flex: 1; 
+-ms-flex: 1;  
+padding-right: 5px;
+}
+
+.tt-member-block-header{
+height: 125px;
+}
+
+.tt-member-block-header:after{
+top: 25px;
+}
 }
