--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -692,7 +692,7 @@ font-weight: bold;
 }
 
 .tt-resources-bold{
-font-weight: bold;
+font-weight: 700;
 }
 
 .tt-member-block-header p:nth-child(1){
