--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -168,7 +168,7 @@ height: 100%;
 #section-1-2{
 background-image: url('../files/tt-home-hero-2020.jpg');
 background-size: cover;
-background-position: center;
+background-position: top;
 height: 300px;
 }
 
