--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -166,9 +166,9 @@ height: 100%;
 }
 
 #section-1-2{
-background-image: url('../files/tt-home-hero-2020.jpg');
+background-image: url('../files/tt-home-hero-2021.jpg');
 background-size: cover;
-background-position: top;
+background-position: center;
 height: 300px;
 }
 
@@ -293,6 +293,19 @@ font-weight: normal;
 color: #EEA015;
 transition: all ease 1s;
 }
+
+.tt-featured-speaker{
+margin: 30px 0;
+}
+
+.tt-featured-speaker img{
+float: left;
+margin-right: 20px;
+margin-top: 20px;
+width: 200px;
+}
+
+
 
 @media screen and (min-width: 700px){
 
