--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -26,12 +26,31 @@ font-weight: lighter;
 letter-spacing: 1.2px;
 }
 
+
+
+/* Top Banner */
+
+div#tt-top-banner{
+position: fixed;
+top: 0px;
+z-index: 50;
+width: 100%;
+padding: 2px 0px;
+text-align: center;
+box-shadow: 0px 5px 8px darkgrey;
+background-color: #e98300;
+}
+
+div#tt-top-banner a{
+color: white !important; 
+}
+
 /*HEADER*/
 
 header{
 width: 100%;
 position: fixed;
-top: 0;
+top: 32px; /*Change back to 0 when banner is removed */ 
 background-color: white;
 z-index: 2;
 padding: 50px;
@@ -48,7 +67,7 @@ font-size: 30px;
 padding: 0 25px;
 color: grey;
 cursor: pointer;
-top: 45px;
+top: 75px; /*Change back to 45px when banner is removed */
 }
 
 input{
