removed index.html from banner link to sponsor page

--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -45,6 +45,10 @@ div#tt-top-banner a{
 color: white !important; 
 }
 
+div#tt-top-banner a:hover{
+text-decoration: underline;
+}
+
 /*HEADER*/
 
 header{
