--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -53,7 +53,7 @@ text-decoration: underline;
 header{
 width: 100%;
 position: fixed;
-top: 32px; /*Change back to 0 when banner is removed */ 
+top: 0; /*Change back to 32px when banner is input */ 
 background-color: white;
 z-index: 2;
 padding: 50px;
@@ -70,7 +70,7 @@ font-size: 30px;
 padding: 0 25px;
 color: grey;
 cursor: pointer;
-top: 75px; /*Change back to 45px when banner is removed */
+top: 45px; /*Change back to 75px when banner is input */
 }
 
 input{
