--- a/transforming-transportation/css/style.css
+++ b/transforming-transportation/css/style.css
@@ -344,6 +344,12 @@ font-weight: 700 !important;
 text-transform: uppercase;
 }
 
+iframe{
+width: 100%;
+height: 325px;
+margin: 25px 0;
+}
+
 
 /* FEATURED SPEAKERS */
 
@@ -748,6 +754,10 @@ text-align: center;
 .featured-speaker{
 display: inline-block;
 width: calc(32% - 25px);
+}
+
+iframe{
+width: 560px;
 }
 }
 
